<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- SYSTEM -->
    <string name="app_name">CookingXP</string>
    <string name="preference_file_key">com.companyx.android.appx.PREFERENCE_FILE_KEY</string>
    <string name="search_hint">Search all recipes</string>
    <string name="facebook_app_id">283163598498410</string>

    <!-- MENU -->
    <string name="menu_recipes">Recipes</string>
    <string name="menu_trees">Trees</string>
    <string name="menu_shopping_list">Shopping List</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_adam">Adam\'s Lab</string>
    <string name="menu_quit">Quit</string>

    <!-- TITLE -->
    <string name="title_recipes">Recipes</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_settings">Settings</string>
    <string name="title_info">Info</string>
    
    <!-- MAIN -->
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="welcome">Under construction</string>
    <string name="reset">Reset Game Data</string>
    
    <!-- SELECT RECIPE -->
    <string name="select_recipe_favorites_alert_title">Favorite Recipes</string>
    <string name="select_recipe_favorites_empty">You don\'t have any favorite recipes saved yet!</string>
    <string name="select_recipe_favorites_empty_ok">Right on.</string>
    <string name="select_recipe_shopping_list_alert_title">Shopping List</string>
    <string name="select_recipe_shopping_list_empty">Your shopping list is currently empty.</string>
    <string name="select_recipe_shopping_list_empty_ok">All good.</string>
    <string name="select_recipe_showing">Showing</string>
    <string name="select_recipe_recipes">recipes</string>
    <string name="select_recipe_image_description">Image.</string>
    <string name="select_recipe_hour">hr</string>
    <string name="select_recipe_hours">hrs</string>
    <string name="select_recipe_min">min</string>
    <string name="select_recipe_all_recipes">All Recipes</string>
    <string name="select_recipe_meat">Meat</string>
    <string name="select_recipe_seafood">Seafood</string>
    <string name="select_recipe_produce">Produce</string>
    <string name="select_recipe_other">Other</string>
    <string name="select_recipe_vegetarian">Vegetarian</string>
    
    <!-- RECIPE -->
    <string name="recipe_favorites_button_description">Add/Remove Favorite</string>
    <string name="recipe_favorites_added">Added</string>
    <string name="recipe_favorites_to_favorites">to Favorites</string>
    <string name="recipe_favorites_removed">Removed</string>
    <string name="recipe_favorites_from_favorites">from Favorites</string>
    <string name="recipe_shopping_list_added">Added</string>
    <string name="recipe_shopping_list_to_shopping_list">to Shopping List</string>
    <string name="recipe_shopping_list_removed">Removed</string>
    <string name="recipe_shopping_list_from_shopping_list">from Shopping List</string>
    <string name="recipe_header_ingredients">Ingredients</string>
    <string name="recipe_header_directions">Directions</string>
    <string name="recipe_header_info">Info</string>
    <string name="recipe_info_prep_time">Prep Time</string>
    <string name="recipe_info_servings">Servings</string>
    <string name="recipe_info_hour">hr</string>
    <string name="recipe_info_hours">hrs</string>
    <string name="recipe_info_min">min</string>
    <string name="recipe_unlocked">unlocked</string>
    
    <!-- MEAT -->
    <string name="bacon">Bacon</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="duck">Duck</string>
    <string name="eel">Eel</string>
    <string name="ham">Ham</string>
    <string name="pork">Pork</string>
    <string name="steak">Steak</string>
    <string name="turkey">Turkey</string>
    
    <!-- SEAFOOD -->
    <string name="carp">Carp</string>
    <string name="clam">Clam</string>
    <string name="crab">Crab</string>
    <string name="fish">Fish</string>
    <string name="herring">Herring</string>
    <string name="lobster">Lobster</string>
    <string name="oyster">Oyster</string>
    <string name="salmon">Salmon</string>
    <string name="tilapia">Tilapia</string>
    <string name="tuna">Tuna</string>
    
    <!-- PRODUCE -->
    <string name="apples">apples</string>
    <string name="avocados">avocados</string>
    <string name="bananas">bananas</string>
    <string name="cabbage">cabbage</string>
    <string name="carrots">carrots</string>
    <string name="celery">celery</string>
    <string name="cucumbers">cucumbers</string>
    <string name="eggplants">eggplants</string>
    <string name="eggs">eggs</string>
    <string name="lettuce">lettuce</string>
    <string name="onions">onions</string>
    <string name="peas">peas</string>
    <string name="potatoes">potatoes</string>
    <string name="spinach">spinach</string>
    
    <!-- GAME BOXES -->
    <string name="game_box_title0">Everyone Loves Bacon</string>
    <string name="game_box_description0">Who doesn\'t, right?!</string>
    <string name="game_box_title1">Basic Steak</string>
    <string name="game_box_description1">Steak Jitsu</string>
    <string name="game_box_title2">Patty</string>
    <string name="game_box_description2">A good burger isn\'t good without a Patty!</string>
    <string name="game_box_title3">BLT</string>
    <string name="game_box_description3">A Classic Sandwich</string>
    <string name="game_box_title4">Bacon Wrapped Steak</string>
    <string name="game_box_description4">Bacon + Meat = Delicious</string>
    <string name="game_box_title5">Patty Melt</string>
    <string name="game_box_description5">Level 2 - Fight!</string>
    <string name="game_box_title6">Meatloaf</string>
    <string name="game_box_description6">Not your mother\'s meatloaf!</string>
    <string name="game_box_title7">Crockpot Roast</string>
    <string name="game_box_description7">Low and slow, that is the tempo!</string>
    <string name="game_box_title8">Meatball</string>
    <string name="game_box_description8">Perfect to eat, or use as ammo to start a food fight!</string>
    <string name="game_box_title9">Beef Stew</string>
    <string name="game_box_description9">It didn\'t come out of a can this time!</string>
    <string name="game_box_title10">Chicken Fried Steak</string>
    <string name="game_box_description10">There is no Secret Chicken level.</string>
    <string name="game_box_title11">Breakfast Sandwich</string>
    <string name="game_box_description11">Breakfast Sandwich</string>
    <string name="game_box_title12">Sloppy Joe</string>
    <string name="game_box_description12">Sloppy Joe</string>
    <string name="game_box_title13">Tuna Salad Sandwich</string>
    <string name="game_box_description13">Tuna Salad Sandwich</string>
    <string name="game_box_title14">Club Sandwich</string>
    <string name="game_box_description14">Club Sandwich</string>
    <string name="game_box_title15">Reuben Sandwich</string>
    <string name="game_box_description15">Reuben Sandwich</string>
    <string name="game_box_title16">Po\' Boy Sub Sandwich</string>
    <string name="game_box_description16">Po\' Boy Sub Sandwich</string>
    <string name="game_box_title17">Meatball Sandwich</string>
    <string name="game_box_description17">Meatball Sandwich</string>
    <string name="game_box_title18">Lobster Roll</string>
    <string name="game_box_description18">Lobster Roll</string>
    <string name="game_box_title19">French Dip</string>
    <string name="game_box_description19">French Dip</string>
    
    <!-- GAME TREES -->
    <string name="game_tree0">The Way of Beef</string>
    <string name="game_tree1">Path of the Sandwich</string>
    
    <!-- GAME RANKS -->
    <string name="game_rank0">Aspiring Cook</string>
    <string name="game_rank1">Cook</string>
    <string name="game_rank2">Apprentice Chef</string>
    <string name="game_rank3">Station Chef</string>
    <string name="game_rank4">Chef</string>
    <string name="game_rank5">Senior Chef</string>
    <string name="game_rank6">Sous Chef</string>
    <string name="game_rank7">Chef de cuisine</string>
    <string name="game_rank8">Executive Chef</string>
    <string name="game_rank9">Master Chef</string>
    
    <!-- FACEBOOK -->
    <string name="facebook_share">Share on Facebook</string>
    <string name="facebook_name">CookingXP for Android</string>
    <string name="facebook_caption">An upcoming game in cooking achievement.</string>
    <string name="facebook_link">https://github.com/JLChin/CookingXP</string>
    <string name="facebook_picture">https://raw.github.com/JLChin/CookingXP/master/res/drawable-xhdpi/ic_launcher.png</string>
    <string name="facebook_s_score">\'s Score</string>
    <string name="facebook_share_success">Successfully shared on Facebook!</string>
    <string name="facebook_no_active_session">No active Facebook session!</string>
    
    <!-- TWITTER -->
    <string name="twitter_share">Share on Twitter</string>
    
    <!-- GOOGLE+ -->
    <string name="google_plus_share">Share on Google+</string>
    
    <!-- INFO -->
    <string name="info_credits"><b>Development</b>
        \nJames Chin
        \nAdam Hackbarth
    </string>

</resources>