<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_recipes"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/menu_recipes"/>
    <item
        android:id="@+id/menu_trees"
        android:icon="@drawable/ic_action_tree"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_trees"/>
    <item
        android:id="@+id/menu_shopping_list"
        android:icon="@drawable/ic_action_shopping_cart"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_shopping_list"/>
    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_action_star"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_favorites"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="6"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_info"
        android:orderInCategory="7"
        android:title="@string/menu_info"/>
    <item
        android:id="@+id/menu_quit"
        android:orderInCategory="8"
        android:title="@string/menu_quit"/>

</menu>